--- a/static/contact-page/css/contact.css
+++ b/static/contact-page/css/contact.css
@@ -12,8 +12,6 @@
   font-family: "Montserrat", sans-serif;
   list-style: none;
   text-decoration: none;
-  scroll-behavior: smooth;
-  scrollbar-width: none;
 }
 
 .cb {
